# glConvolution

./: CMakeLists.txt  LICENSE  README.md  main.cpp  shader.frag  shader.vert
